# interview_notes

cpp/: CMakeLists.txt
cpp/memory_management/: practice.cpp  questions.md
cpp/oops/: practice.cpp  questions.md
cpp/stl/: notes.md
linear_algebra/: interview_questions.md  topicwise_notes.md
